[project]
name = "daolab-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.3",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "pymongo>=4.14.1",
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
